<resources>
    <string name="app_name">你好！生活</string>

    <string name="navigation_drawer_open">打开导航菜单</string>
    <string name="navigation_drawer_close">关闭导航菜单</string>

    <string name="action_settings">设置</string>
    <string name="title_activity_login">登录</string>

    <!-- Strings related to login -->
    <string name="prompt_phone">输入您的手机号（无需注册）</string>
    <string name="error_invalid_phone">请输入手机号</string>
    <string name="prompt_password">输入您的验证码</string>
    <string name="error_invalid_password">请输入验证码</string>
    <string name="action_next_step">下一步</string>
    <string name="action_sign_in_short">登录</string>
    <string name="error_incorrect_password">验证码错误，请重新输入！</string>
    <string name="login_help_tip">关于账号方面的帮助？</string>
    <string name="login_code_help_tip">未收到验证码？</string>

    <string name="hello_blank_fragment">Fragment ！</string>

    <!-- 操作栏 -->
    <string name="nav_home">首页</string>
        <string name="clean">保洁服务</string>
            <string name="deep">深度保洁</string>
            <string name="daily">日常清洁</string>
            <string name="window">橱窗清洁</string>
            <string name="kitchen">厨房清洁</string>
            <string name="newhouse">新房开荒</string>
            <string name="shower">浴室清洁</string>
        <string name="maintain">维修服务</string>
            <string name="wood">木工</string>
            <string name="mason">泥瓦工</string>
            <string name="plumber">水电工</string>
            <string name="m_electric">电器</string>
            <string name="painter">油漆工</string>
        <string name="electric">电器清洗</string>
            <string name="gas">燃气灶清洗</string>
            <string name="microwave">微波炉清洗</string>
            <string name="refrigerator">冰箱清洗</string>
            <string name="rangehood">油烟机清洗</string>
            <string name="aircondition">空调清洗</string>
            <string name="washin">洗衣机清洗</string>
            <string name="distinfection">消毒柜清洗</string>
            <string name="oven">烤箱清洗</string>
            <string name="water">饮水机清洗</string>
        <string name="homely">家居保养</string>
            <string name="sofa">沙发保养</string>
            <string name="floor">地板打蜡</string>
        <string name="move">搬家服务</string>
            <string name="house">家庭搬家</string>
            <string name="factory">企业搬厂</string>
            <string name="weight">重物吊运</string>
        <string name="pipeline">管道疏通</string>
            <string name="sewer">下水道疏通</string>
            <string name="closetool">马桶疏通</string>
            <string name="bathtub">浴缸疏通</string>
        <string name="other">其他服务</string>
            <string name="dryclean">衣服干洗</string>
            <string name="aunt">保姆月嫂</string>
            <string name="ch2o">除甲醛</string>

    <string name="nav_life">生活频道</string>
    <string name="nav_order">我的订单</string>
    <string name="nav_coupon">优惠券</string>


    <!-- TODO: URL配置 -->
    <string name="contextPath">http://192.168.191.1:8080/hilife-web-user</string>
    <string name="checkUser">/web/auth/checkUser</string>
    <string name="sendLoginSms">/web/auth/sendLoginSms</string>
    <string name="logout">/web/auth/logout</string>
    <string name="login_authc">/web/auth/login/authc</string>

</resources>
